--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <h1>Fazendo CI/CD projeto hospedado no GitHub usando o framework Angular</h1>
 <hr>
 
+<h2>Eu entendo Devops</h2>
+
 </body>
 </html>
